[gd_scene load_steps=18 format=3 uid="uid://d0ynilkootkhi"]

[ext_resource type="PackedScene" uid="uid://c45ctv2rhu0kq" path="res://scenes/character.tscn" id="1_fdupv"]
[ext_resource type="Texture2D" uid="uid://bg1s5se8cr3wk" path="res://sprites/RoadTileSet.png" id="1_fejjx"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_h0ug2"]
[ext_resource type="Script" path="res://scripts/Spawn1.gd" id="4_x7hda"]
[ext_resource type="Script" path="res://scripts/Spawn2.gd" id="5_husu4"]
[ext_resource type="Script" path="res://scripts/Spawn3.gd" id="6_6xamf"]
[ext_resource type="Script" path="res://scripts/Spawn4.gd" id="7_p46j0"]
[ext_resource type="Script" path="res://scripts/Spawn5.gd" id="8_m0h88"]
[ext_resource type="Script" path="res://scripts/Spawn6.gd" id="9_6n7kn"]
[ext_resource type="AudioStream" uid="uid://r08y3ytvsxiw" path="res://Flyday-Chinatown-_Yasuha_.ogg" id="10_rq5xg"]
[ext_resource type="AudioStream" uid="uid://bmy4ud80yr3m0" path="res://error.mp3" id="11_gytem"]
[ext_resource type="PackedScene" uid="uid://8cr10cjh1458" path="res://scenes/hud.tscn" id="12_xemjo"]
[ext_resource type="AudioStream" uid="uid://25erpfpqs4ha" path="res://Victory.ogg" id="13_gg380"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_orwsy"]
resource_name = "Road"
texture = ExtResource("1_fejjx")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
2:6/0 = 0

[sub_resource type="TileSet" id="TileSet_8veoq"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_orwsy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efu0w"]
size = Vector2(682, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li6jh"]
size = Vector2(671, 10)

[node name="Main" type="Node2D"]
script = ExtResource("1_h0ug2")

[node name="Ground" type="Node2D" parent="."]

[node name="Road" type="Sprite2D" parent="Ground"]

[node name="TileMap" type="TileMap" parent="Ground"]
position = Vector2(0, -12)
tile_set = SubResource("TileSet_8veoq")
format = 2
layer_0/tile_data = PackedInt32Array(1245184, 131072, 1, 1245185, 131072, 1, 1245186, 131072, 1, 1245187, 131072, 1, 1245188, 131072, 1, 1245189, 131072, 1, 1245190, 131072, 1, 1245191, 131072, 1, 1245192, 131072, 1, 1245193, 131072, 1, 1245194, 131072, 1, 1245195, 131072, 1, 1245196, 131072, 1, 1245197, 131072, 1, 1245198, 131072, 1, 1245199, 131072, 1, 1245200, 131072, 1, 1245201, 131072, 1, 1245202, 131072, 1, 1245203, 131072, 1, 1245204, 131072, 1, 131072, 131072, 1, 196608, 0, 1, 262144, 131072, 1, 327680, 131072, 6, 393216, 0, 1, 458752, 131072, 1, 524288, 131072, 6, 589824, 0, 1, 655360, 131072, 1, 720896, 131072, 6, 786432, 0, 1, 851968, 131072, 1, 917504, 131072, 6, 983040, 0, 1, 1048576, 131072, 1, 1114112, 131072, 6, 1179648, 0, 1, 131073, 0, 4, 196609, 0, 1, 262145, 131072, 1, 327681, 131072, 6, 393217, 0, 1, 458753, 131072, 1, 524289, 131072, 6, 589825, 0, 1, 655361, 131072, 1, 720897, 131072, 6, 786433, 0, 1, 851969, 131072, 1, 917505, 131072, 6, 983041, 0, 1, 1048577, 131072, 1, 1114113, 131072, 6, 1179649, 0, 1, 131074, 131072, 4, 196610, 0, 1, 262146, 131072, 1, 327682, 131072, 6, 393218, 0, 1, 458754, 131072, 1, 524290, 131072, 6, 589826, 0, 1, 655362, 131072, 1, 720898, 131072, 6, 786434, 0, 1, 851970, 131072, 1, 917506, 131072, 6, 983042, 0, 1, 1048578, 131072, 1, 1114114, 131072, 6, 1179650, 0, 1, 131075, 131072, 4, 196611, 0, 1, 262147, 131072, 1, 327683, 131072, 6, 393219, 0, 1, 458755, 131072, 1, 524291, 131072, 6, 589827, 0, 1, 655363, 131072, 1, 720899, 131072, 6, 786435, 0, 1, 851971, 131072, 1, 917507, 131072, 6, 983043, 0, 1, 1048579, 131072, 1, 1114115, 131072, 6, 1179651, 0, 1, 131076, 131072, 4, 196612, 0, 1, 262148, 131072, 1, 327684, 131072, 6, 393220, 0, 1, 458756, 131072, 1, 524292, 131072, 6, 589828, 0, 1, 655364, 131072, 1, 720900, 131072, 6, 786436, 0, 1, 851972, 131072, 1, 917508, 131072, 6, 983044, 0, 1, 1048580, 131072, 1, 1114116, 131072, 6, 1179652, 0, 1, 131077, 196608, 4, 196613, 0, 1, 262149, 131072, 1, 327685, 131072, 6, 393221, 0, 1, 458757, 131072, 1, 524293, 131072, 6, 589829, 0, 1, 655365, 131072, 1, 720901, 131072, 6, 786437, 0, 1, 851973, 131072, 1, 917509, 131072, 6, 983045, 0, 1, 1048581, 131072, 1, 1114117, 131072, 6, 1179653, 0, 1, 131078, 131072, 1, 196614, 0, 1, 262150, 131072, 1, 327686, 131072, 6, 393222, 0, 1, 458758, 131072, 1, 524294, 131072, 6, 589830, 0, 1, 655366, 131072, 1, 720902, 131072, 6, 786438, 0, 1, 851974, 131072, 1, 917510, 131072, 6, 983046, 0, 1, 1048582, 131072, 1, 1114118, 131072, 6, 1179654, 0, 1, 131079, 131072, 1, 196615, 0, 1, 262151, 131072, 1, 327687, 131072, 6, 393223, 0, 1, 458759, 131072, 1, 524295, 131072, 6, 589831, 0, 1, 655367, 131072, 1, 720903, 131072, 6, 786439, 0, 1, 851975, 131072, 1, 917511, 131072, 6, 983047, 0, 1, 1048583, 131072, 1, 1114119, 131072, 6, 1179655, 0, 1, 131080, 131072, 1, 196616, 0, 1, 262152, 131072, 1, 327688, 131072, 6, 393224, 0, 1, 458760, 131072, 1, 524296, 131072, 6, 589832, 0, 1, 655368, 131072, 1, 720904, 131072, 6, 786440, 0, 1, 851976, 131072, 1, 917512, 131072, 6, 983048, 0, 1, 1048584, 131072, 1, 1114120, 131072, 6, 1179656, 0, 1, 131081, 131072, 1, 196617, 0, 1, 262153, 131072, 1, 327689, 131072, 6, 393225, 0, 1, 458761, 131072, 1, 524297, 131072, 6, 589833, 0, 1, 655369, 131072, 1, 720905, 131072, 6, 786441, 0, 1, 851977, 131072, 1, 917513, 131072, 6, 983049, 0, 1, 1048585, 131072, 1, 1114121, 131072, 6, 1179657, 0, 1, 131082, 131072, 1, 196618, 0, 1, 262154, 131072, 1, 327690, 131072, 6, 393226, 0, 1, 458762, 131072, 1, 524298, 131072, 6, 589834, 0, 1, 655370, 131072, 1, 720906, 131072, 6, 786442, 0, 1, 851978, 131072, 1, 917514, 131072, 6, 983050, 0, 1, 1048586, 131072, 1, 1114122, 131072, 6, 1179658, 0, 1, 131083, 131072, 1, 196619, 0, 1, 262155, 131072, 1, 327691, 131072, 6, 393227, 0, 1, 458763, 131072, 1, 524299, 131072, 6, 589835, 0, 1, 655371, 131072, 1, 720907, 131072, 6, 786443, 0, 1, 851979, 131072, 1, 917515, 131072, 6, 983051, 0, 1, 1048587, 131072, 1, 1114123, 131072, 6, 1179659, 0, 1, 131084, 131072, 1, 196620, 0, 1, 262156, 131072, 1, 327692, 131072, 6, 393228, 0, 1, 458764, 131072, 1, 524300, 131072, 6, 589836, 0, 1, 655372, 131072, 1, 720908, 131072, 6, 786444, 0, 1, 851980, 131072, 1, 917516, 131072, 6, 983052, 0, 1, 1048588, 131072, 1, 1114124, 131072, 6, 1179660, 0, 1, 131085, 131072, 1, 196621, 0, 1, 262157, 131072, 1, 327693, 131072, 6, 393229, 0, 1, 458765, 131072, 1, 524301, 131072, 6, 589837, 0, 1, 655373, 131072, 1, 720909, 131072, 6, 786445, 0, 1, 851981, 131072, 1, 917517, 131072, 6, 983053, 0, 1, 1048589, 131072, 1, 1114125, 131072, 6, 1179661, 0, 1, 131086, 0, 4, 196622, 0, 1, 262158, 131072, 1, 327694, 131072, 6, 393230, 0, 1, 458766, 131072, 1, 524302, 131072, 6, 589838, 0, 1, 655374, 131072, 1, 720910, 131072, 6, 786446, 0, 1, 851982, 131072, 1, 917518, 131072, 6, 983054, 0, 1, 1048590, 131072, 1, 1114126, 131072, 6, 1179662, 0, 1, 131087, 131072, 4, 196623, 0, 1, 262159, 131072, 1, 327695, 131072, 6, 393231, 0, 1, 458767, 131072, 1, 524303, 131072, 6, 589839, 0, 1, 655375, 131072, 1, 720911, 131072, 6, 786447, 0, 1, 851983, 131072, 1, 917519, 131072, 6, 983055, 0, 1, 1048591, 131072, 1, 1114127, 131072, 6, 1179663, 0, 1, 131088, 131072, 4, 196624, 0, 1, 262160, 131072, 1, 327696, 131072, 6, 393232, 0, 1, 458768, 131072, 1, 524304, 131072, 6, 589840, 0, 1, 655376, 131072, 1, 720912, 131072, 6, 786448, 0, 1, 851984, 131072, 1, 917520, 131072, 6, 983056, 0, 1, 1048592, 131072, 1, 1114128, 131072, 6, 1179664, 0, 1, 131089, 131072, 4, 196625, 0, 1, 262161, 131072, 1, 327697, 131072, 6, 393233, 0, 1, 458769, 131072, 1, 524305, 131072, 6, 589841, 0, 1, 655377, 131072, 1, 720913, 131072, 6, 786449, 0, 1, 851985, 131072, 1, 917521, 131072, 6, 983057, 0, 1, 1048593, 131072, 1, 1114129, 131072, 6, 1179665, 0, 1, 131090, 196608, 4, 196626, 0, 1, 262162, 131072, 1, 327698, 131072, 6, 393234, 0, 1, 458770, 131072, 1, 524306, 131072, 6, 589842, 0, 1, 655378, 131072, 1, 720914, 131072, 6, 786450, 0, 1, 851986, 131072, 1, 917522, 131072, 6, 983058, 0, 1, 1048594, 131072, 1, 1114130, 131072, 6, 1179666, 0, 1, 131091, 131072, 1, 196627, 0, 1, 262163, 131072, 1, 327699, 131072, 6, 393235, 0, 1, 458771, 131072, 1, 524307, 131072, 6, 589843, 0, 1, 655379, 131072, 1, 720915, 131072, 6, 786451, 0, 1, 851987, 131072, 1, 917523, 131072, 6, 983059, 0, 1, 1048595, 131072, 1, 1114131, 131072, 6, 1179667, 0, 1, 131092, 131072, 1, 196628, 0, 1, 262164, 131072, 1, 327700, 131072, 6, 393236, 0, 1, 458772, 131072, 1, 524308, 131072, 6, 589844, 0, 1, 655380, 131072, 1, 720916, 131072, 6, 786452, 0, 1, 851988, 131072, 1, 917524, 131072, 6, 983060, 0, 1, 1048596, 131072, 1, 1114132, 131072, 6, 1179668, 0, 1, 0, 131072, 1, 65536, 196608, 2, 1, 131072, 1, 65537, 196608, 2, 2, 131072, 1, 65538, 196608, 2, 3, 131072, 1, 65539, 196608, 2, 4, 131072, 1, 65540, 196608, 2, 5, 131072, 1, 65541, 196608, 2, 6, 131072, 1, 65542, 196608, 2, 7, 131072, 1, 65543, 196608, 2, 8, 131072, 1, 65544, 196608, 2, 9, 131072, 1, 65545, 196608, 2, 10, 131072, 1, 65546, 196608, 2, 11, 131072, 1, 65547, 196608, 2, 12, 131072, 1, 65548, 196608, 2, 13, 131072, 1, 65549, 196608, 2, 14, 131072, 1, 65550, 196608, 2, 15, 131072, 1, 65551, 196608, 2, 16, 131072, 1, 65552, 196608, 2, 17, 131072, 1, 65553, 196608, 2, 18, 131072, 1, 65554, 196608, 2, 19, 131072, 1, 65555, 196608, 2, 20, 131072, 1, 65556, 196608, 2, 1376256, 0, 1, 1376257, 0, 1, 1376258, 0, 1, 1376259, 0, 1, 1376260, 0, 1, 1376261, 0, 1, 1376262, 0, 1, 1376263, 0, 1, 1376264, 0, 1, 1376265, 0, 1, 1376266, 0, 1, 1376267, 0, 1, 1376268, 0, 1, 1376269, 0, 1, 1376270, 0, 1, 1376271, 0, 1, 1376272, 0, 1, 1376273, 0, 1, 1376274, 0, 1, 1376275, 0, 1, 1376276, 0, 1, 1310720, 131072, 6, 1310721, 131072, 6, 1310722, 131072, 6, 1310723, 131072, 6, 1310724, 131072, 6, 1310725, 131072, 6, 1310726, 131072, 6, 1310727, 131072, 6, 1310728, 131072, 6, 1310729, 131072, 6, 1310730, 131072, 6, 1310731, 131072, 6, 1310732, 131072, 6, 1310733, 131072, 6, 1310734, 131072, 6, 1310735, 131072, 6, 1310736, 131072, 6, 1310737, 131072, 6, 1310738, 131072, 6, 1310739, 131072, 6, 1310740, 131072, 6, 1441792, 131072, 1, 1441793, 131072, 1, 1441794, 131072, 1, 1441795, 131072, 1, 1441796, 131072, 1, 1441797, 131072, 1, 1441798, 131072, 1, 1441799, 131072, 1, 1441800, 131072, 1, 1441801, 131072, 1, 1441802, 131072, 1, 1441803, 131072, 1, 1441804, 131072, 1, 1441805, 131072, 1, 1441806, 131072, 1, 1441807, 131072, 1, 1441808, 131072, 1, 1441809, 131072, 1, 1441810, 131072, 1, 1441811, 131072, 1, 1441812, 131072, 1, 1507348, 131072, 1, 1507347, 131072, 1, 1572883, 196608, 2, 1572882, 196608, 2, 1572881, 196608, 2, 1572880, 196608, 2, 1572879, 196608, 2, 1572878, 196608, 2, 1572877, 196608, 2, 1572876, 196608, 2, 1572875, 196608, 2, 1572874, 196608, 2, 1572873, 196608, 2, 1572872, 196608, 2, 1572871, 196608, 2, 1572870, 196608, 2, 1572869, 196608, 2, 1572868, 196608, 2, 1507331, 65536, 4, 1507330, 65536, 4, 1507329, 0, 4, 1507328, 131072, 1, 1572864, 196608, 2, 1572865, 196608, 2, 1572866, 196608, 2, 1572867, 196608, 2, 1507339, 131072, 1, 1507338, 131072, 1, 1507337, 131072, 1, 1507336, 131072, 1, 1507335, 131072, 1, 1507334, 131072, 1, 1507333, 196608, 4, 1507332, 65536, 4, 1507340, 131072, 1, 1507341, 131072, 1, 1507342, 0, 4, 1507343, 65536, 4, 1507344, 65536, 4, 1507345, 65536, 4, 1507346, 196608, 4, 1572884, 196608, 2)

[node name="Character" parent="." instance=ExtResource("1_fdupv")]
position = Vector2(320, 740)

[node name="Begin" type="StaticBody2D" parent="."]
position = Vector2(0, 778)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Begin"]
position = Vector2(331, -5)
shape = SubResource("RectangleShape2D_efu0w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(335.5, 5)
shape = SubResource("RectangleShape2D_li6jh")

[node name="Spawn1" type="Marker2D" parent="."]
position = Vector2(-50, 644)
script = ExtResource("4_x7hda")

[node name="Spawn1Timer" type="Timer" parent="Spawn1"]
wait_time = 2.0

[node name="Spawn2" type="Marker2D" parent="."]
position = Vector2(698, 548)
script = ExtResource("5_husu4")

[node name="Spawn2Timer" type="Timer" parent="Spawn2"]

[node name="Spawn3" type="Marker2D" parent="."]
position = Vector2(-50, 452)
script = ExtResource("6_6xamf")

[node name="Spawn3Timer" type="Timer" parent="Spawn3"]
wait_time = 2.0

[node name="Spawn4" type="Marker2D" parent="."]
position = Vector2(698, 356)
script = ExtResource("7_p46j0")

[node name="Spawn4Timer" type="Timer" parent="Spawn4"]
wait_time = 1.5

[node name="Spawn5" type="Marker2D" parent="."]
position = Vector2(-50, 260)
script = ExtResource("8_m0h88")

[node name="Spawn5Timer" type="Timer" parent="Spawn5"]
wait_time = 1.25

[node name="Spawn6" type="Marker2D" parent="."]
position = Vector2(698, 164)
script = ExtResource("9_6n7kn")

[node name="Spawn6Timer" type="Timer" parent="Spawn6"]

[node name="Road1" type="Marker2D" parent="."]
position = Vector2(320, 740)

[node name="Road2" type="Marker2D" parent="."]
position = Vector2(320, 644)

[node name="Road3" type="Marker2D" parent="."]
position = Vector2(320, 548)

[node name="Road4" type="Marker2D" parent="."]
position = Vector2(320, 452)

[node name="Road5" type="Marker2D" parent="."]
position = Vector2(320, 356)

[node name="Road6" type="Marker2D" parent="."]
position = Vector2(320, 260)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_rq5xg")
autoplay = true

[node name="Error" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_gytem")

[node name="HUD" parent="." instance=ExtResource("12_xemjo")]

[node name="Victory" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_gg380")

[connection signal="body_entered" from="Area2D" to="HUD" method="update_score"]
[connection signal="road1" from="Spawn1" to="." method="_on_spawn_1_road_1"]
[connection signal="timeout" from="Spawn1/Spawn1Timer" to="Spawn1" method="_on_spawn_1_timer_timeout"]
[connection signal="road2" from="Spawn2" to="." method="_on_spawn_2_road_2"]
[connection signal="timeout" from="Spawn2/Spawn2Timer" to="Spawn2" method="_on_spawn_2_timer_timeout"]
[connection signal="road3" from="Spawn3" to="." method="_on_spawn_3_road_3"]
[connection signal="timeout" from="Spawn3/Spawn3Timer" to="Spawn3" method="_on_spawn_3_timer_timeout"]
[connection signal="road4" from="Spawn4" to="." method="_on_spawn_4_road_4"]
[connection signal="timeout" from="Spawn4/Spawn4Timer" to="Spawn4" method="_on_spawn_4_timer_timeout"]
[connection signal="road5" from="Spawn5" to="." method="_on_spawn_5_road_5"]
[connection signal="timeout" from="Spawn5/Spawn5Timer" to="Spawn5" method="_on_spawn_5_timer_timeout"]
[connection signal="road6" from="Spawn6" to="." method="_on_spawn_6_road_6"]
[connection signal="timeout" from="Spawn6/Spawn6Timer" to="Spawn6" method="_on_spawn_6_timer_timeout"]
[connection signal="match_point" from="HUD" to="." method="_on_hud_match_point"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
